bunch of fixes related to #8 #9

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Fri Oct 29 19:47:00 MSD 2010
+#Fri Nov 05 18:35:09 MSK 2010
 eclipse.preferences.version=1
+encoding//src/GroupWindowUI.py=utf-8
 encoding//src/MainWindow.py=utf-8
 encoding//src/Ui_AuthWindow.py=utf-8
 encoding//src/UserUI.py=utf-8
