--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Fri Nov 05 18:35:09 MSK 2010
+#Sun Nov 07 16:30:58 MSK 2010
 eclipse.preferences.version=1
 encoding//src/GroupWindowUI.py=utf-8
 encoding//src/MainWindow.py=utf-8
+encoding//src/RestrictionsUI.py=utf-8
 encoding//src/Ui_AuthWindow.py=utf-8
 encoding//src/UserUI.py=utf-8
